<resources>
    <string name="app_name">Truyen Tranh Online</string>
    <string name="version">v1.0.0</string>

    // Base
    <string name="message_waiting">Xin đợi</string>
    <string name="error_network_content">Không có kết nối mạng</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Truyện huyền thoại</string>
    <string name="nav_item_hot">Truyện hot</string>
    <string name="nav_item_new">Truyện mới</string>
    <string name="nav_item_adult">Truyện 18+</string>
    <string name="nav_item_manhwa">Truyện Manhwa</string>
    <string name="nav_item_sport">Truyện Sports</string>
    <string name="nav_item_setting">Cài đặt</string>
    <string name="nav_item_feedback">Góp ý</string>
    <string name="nav_item_info">Thông tin ứng dụng</string>

    <string name="detail_comic">Chi tiết truyện</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="view_number">Ngày đăng</string>
    <string name="like_number">Bình luận</string>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_setting</item>
        <item>@string/nav_item_feedback</item>
        <item>@string/nav_item_info</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_inuyasha">Khuyển Dạ Xoa</string>
    <string name="title_home">Home</string>

    <string name="feedback_subject">Feedback for EmailIntentBuilder</string>
    <string name="feedback_body">[Your feedback here]</string>
    <string name="error_no_email_app">No email app found</string>

    <string name="back_again_to_exit">Please click BACK again to exit</string>
</resources>
